# CrispEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
CrispCore/: CMakeLists.txt
CrispCore/Source/Core/: Application.cpp  Application.h  EntryPoint.h  Logger.cpp  Logger.h
CrispCore/Source/Core/Events/: Event.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.h
CrispCore/Source/Core/Platform/: Input.cpp  Input.h  Platform.cpp  Platform.h  Window.cpp
CrispCore/Source/Core/Platform/Input System/: DefaultInput.cpp  DefaultInput.h  Input.cpp  Input.h
CrispCore/Source/Platform/: Platform.cpp  Platform.h  Window.cpp  Window.h
CrispCore/Source/Platform/Input System/: DefaultInput.cpp  DefaultInput.h  Input.cpp  Input.h
CrispCore/Source/Renderer/: CommandBuffer.h  RenderTypes.h  Renderer.cpp  Renderer.h  RendererBackend.h
CrispCore/Source/Renderer/Vulkan/: VulkanBackendAPI.cpp  VulkanBackendAPI.h  VulkanBackendIncludes.h  VulkanCommandBuffer.h  VulkanForwardDeclarations.h  VulkanIncludes.h  VulkanRenderPass.cpp  VulkanRenderPass.h
CrispCore/source/: test.cpp  test.h
CrispTest/: CMakeLists.txt
CrispTest/Source/: main.cpp
CrispTest/source/: main.cpp
